--- a/main.html
+++ b/main.html
@@ -4,6 +4,22 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<table>
+		<thead>
+			<th>roll number</th>
+			<th>name</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>123</td>
+				<td>shubham</td>
+			</tr>
+			<tr>
+				<td>123</td>
+				<td>shubham</td>
+			</tr>
+		</tbody>
+	</table>
 </head>
 
 <body>
